[chore] rework link unlink modals

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -8,6 +8,10 @@
         "maps": "Maps",
         "playlists": "Playlists",
         "models": "Modelle",
+        "avatars": "Avatare",
+        "sabers": "Säbel",
+        "platforms": "Plattformen",
+        "blocks": "Blöcke",
         "cancel": "Abbrechen",
         "delete": "Löschen",
         "accept": "Akzeptieren",
@@ -19,7 +23,8 @@
         "choose-folder": "Ordner Wählen",
         "unknown": "Ein unbekannter Fehler ist aufgetreten ¯\\_(ツ)_/¯",
         "warning": "Achtung",
-        "continue": "Weiter"
+        "continue": "Weiter",
+        "shared": "Geteilt"
     },
     "title-bar": {
         "outdated": "veraltet"
@@ -756,30 +761,28 @@
                     }
                 }
             },
-            "link-maps": {
-                "title": "Maps verknüpfen",
-                "desc": "Das Verknüpfen von Maps ermöglicht es, Maps zwischen allen Versionen zu teilen. Nach der Verknüpfung profitiert diese Version von den geteilten Maps.",
-                "info": "Das Hinzufügen und Löschen von Maps wird ebenfalls geteilt.",
-                "keep-maps": {
-                    "label": "Maps behalten",
-                    "title": "\"Maps behalten\" verschiebt die Maps der aktuellen Version in den geteilten Maps-Ordner. Andernfalls gehen sie verloren."
-                },
-                "valid-btn": "Maps verknüpfen"
-            },
-            "unlink-maps": {
-                "title": "Maps-Verknüpfung aufheben",
-                "desc": "Bitte beachte, dass das Aufheben der Verknüpfung von Maps die Verwendung von geteilten Maps für diese Version nicht zulässt.",
-                "keep-maps": {
-                    "label": "Maps behalten",
-                    "title": "\"Maps behalten\" kopiert die Maps aus dem geteilten Maps-Ordner in den Ordner der ausgewählten Version. Andernfalls gehen sie verloren."
-                },
-                "valid-btn": "Verknüpfung aufheben"
-            },
             "delete-duplicate-maps": {
                 "title": "Map entfernen?",
                 "desc": "Nur die Karte \"{map}\" ist ein Duplikat. Bist du sicher, dass du sie löschen möchtest?",
                 "desc-plural": "Es wurden {nb} doppelte Karten gefunden. Bist du sicher, dass du sie löschen möchtest?"
             }
+        },
+        "link-contents": {
+            "title": "Die {contentType} verknüpfen",
+            "p-1": "Das Verknüpfen der {contentType} ermöglicht das Teilen der {contentType} zwischen allen Versionen mit dieser Funktion. Sobald verknüpft, profitiert diese Version von geteilten {contentType}.",
+            "p-2": "Um die Verknüpfungsfunktion zu nutzen, werden alle deine {itemsHtml} in den {sharedHtml}-Ordner verschoben. Danach wird ein symbolischer Link, der auf den gemeinsamen {contentType}-Ordner verweist, deinen ursprünglichen {contentType}-Ordner ersetzen.",
+            "warning": "Bitte beachten Sie, dass alle Änderungen an den {contentType} auch alle Versionen mit dieser Funktion beeinflussen.",
+            "what-is-a-symbolic-link": "Was ist ein symbolischer Link?",
+            "i-need-help": "Ich brauche Hilfe",
+            "valid-btn": "Die {contentType} verknüpfen"
+        },
+        "unlink-contents": {
+            "title": "Die {contentType} entknüpfen",
+            "p-1": "Achtung, das Entknüpfen der {contentType} deaktiviert die Nutzung von geteilten {contentType} für diese Version, bis es wieder aktiviert wird.",
+            "p-2": "Um die Verknüpfung deiner {contentType} aufzuheben, wird der symbolische Link, der auf den {sharedHtml}-Ordner verweist, entfernt. Danach werden alle {contentType} aus dem geteilten Ordner in den {itemsHtml}-Ordner deiner Beat Saber-Version kopiert.",
+            "do-not-copy-contents": "Die {contentType} nicht kopieren",
+            "do-not-copy-contents-tip": "Wenn aktiviert, werden die {contentType} im geteilten Ordner nicht in deine Beat Saber-Version kopiert. Infolgedessen werden keine {contentType} in deiner Version verbleiben, nachdem die Verknüpfung aufgehoben wurde.",
+            "valid-btn": "Die {contentType} entknüpfen"
         },
         "download-maps": {
             "search-btn": "Suchen",
@@ -1027,86 +1030,6 @@
                 "no-models": "Keine Modelle gefunden.",
                 "no-internet": "Keine Internetverbindung.",
                 "error-occured": "Ein Fehler ist aufgetreten, versuche es später erneut."
-            },
-            "link-models": {
-                "avatar": {
-                    "title": "Avatare verbinden",
-                    "desc": "Das Verbinden von Avataren ermöglicht das Teilen von Avataren zwischen allen Versionen. Sobald verbunden, wird diese Version von den geteilten Avataren profitieren.",
-                    "info": "Das Hinzufügen und Entfernen von Avataren wird ebenfalls geteilt.",
-                    "keep-models": {
-                        "label": "Avatare behalten",
-                        "title": "Das Behalten der Avatare wird die Avatare der aktuellen Version in den Ordner der geteilten Avatare verschieben. Andernfalls gehen sie verloren."
-                    },
-                    "valid-btn": "Avatare verbinden"
-                },
-                "saber": {
-                    "title": "Säbel verbinden",
-                    "desc": "Das Verbinden von Säbeln ermöglicht das Teilen von Säbeln zwischen allen Versionen. Sobald verbunden, wird diese Version von den geteilten Säbeln profitieren.",
-                    "info": "Das Hinzufügen und Entfernen von Säbeln wird ebenfalls geteilt.",
-                    "keep-models": {
-                        "label": "Säbel behalten",
-                        "title": "Das Behalten der Säbel wird die Säbel der aktuellen Version in den Ordner der geteilten Säbel verschieben. Andernfalls gehen sie verloren."
-                    },
-                    "valid-btn": "Säbel verbinden"
-                },
-                "platform": {
-                    "title": "Plattformen verbinden",
-                    "desc": "Das Verbinden von Plattformen ermöglicht das Teilen von Plattformen zwischen allen Versionen. Sobald verbunden, wird diese Version von den geteilten Plattformen profitieren.",
-                    "info": "Das Hinzufügen und Entfernen von Plattformen wird ebenfalls geteilt.",
-                    "keep-models": {
-                        "label": "Plattformen behalten",
-                        "title": "Das Behalten der Plattformen wird die Plattformen der aktuellen Version in den Ordner der geteilten Plattformen verschieben. Andernfalls gehen sie verloren."
-                    },
-                    "valid-btn": "Plattformen verbinden"
-                },
-                "bloq": {
-                    "title": "Bloqs verbinden",
-                    "desc": "Das Verbinden von Bloqs ermöglicht das Teilen von Bloqs zwischen allen Versionen. Sobald verbunden, wird diese Version von den geteilten Bloqs profitieren.",
-                    "info": "Das Hinzufügen und Entfernen von Bloqs wird ebenfalls geteilt.",
-                    "keep-models": {
-                        "label": "Bloqs behalten",
-                        "title": "Das Behalten der Bloqs wird die Bloqs der aktuellen Version in den Ordner der geteilten Bloqs verschieben. Andernfalls gehen sie verloren."
-                    },
-                    "valid-btn": "Bloqs verbinden"
-                }
-            },
-            "unlink-models": {
-                "avatar": {
-                    "title": "Avatare trennen",
-                    "desc": "Achtung, das Trennen der Avatare wird die Nutzung der geteilten Avatare für diese Version nicht mehr ermöglichen.",
-                    "keep-models": {
-                        "label": "Avatare behalten",
-                        "title": "Das Behalten der Avatare wird eine Kopie der geteilten Avatare für die aktuelle Version erstellen. Andernfalls wird kein Avatar für diese Version aufbewahrt."
-                    },
-                    "valid-btn": "Avatare trennen"
-                },
-                "saber": {
-                    "title": "Säbel trennen",
-                    "desc": "Achtung, das Trennen der Säbel wird die Nutzung der geteilten Säbel für diese Version nicht mehr ermöglichen.",
-                    "keep-models": {
-                        "label": "Säbel behalten",
-                        "title": "Das Behalten der Säbel wird eine Kopie der geteilten Säbel für die aktuelle Version erstellen. Andernfalls wird kein Säbel für diese Version aufbewahrt."
-                    },
-                    "valid-btn": "Säbel trennen"
-                },
-                "platform": {
-                    "title": "Plattformen trennen",
-                    "desc": "Achtung, das Trennen der Plattformen wird die Nutzung der geteilten Plattformen für diese Version nicht mehr ermöglichen.",
-                    "keep-models": {
-                        "label": "Plattformen behalten",
-                        "title": "Das Behalten der Plattformen wird eine Kopie der geteilten Plattformen für die aktuelle Version erstellen. Andernfalls wird keine Plattform für diese Version aufbewahrt."
-                    },
-                    "valid-btn": "Plattformen trennen"
-                },
-                "bloq": {
-                    "title": "Bloqs trennen",
-                    "desc": "Achtung, das Trennen der Bloqs wird die Nutzung der geteilten Bloqs für diese Version nicht mehr ermöglichen.",
-                    "keep-models": {
-                        "label": "Bloqs behalten",
-                        "title": "Das Behalten der Bloqs wird eine Kopie der geteilten Bloqs für die aktuelle Version erstellen. Andernfalls wird kein Bloq für diese Version aufbewahrt."
-                    },
-                    "valid-btn": "Bloqs trennen"
-                }
             }
         },
         "notifications": {
@@ -1183,14 +1106,6 @@
         "stop-download": "Download stoppen",
         "cancel-download": "Download abbrechen",
         "open-file": "Datei öffnen",
-        "link-playlists": "Playlists verknüpfen",
-        "link-playlist-desc": "Das Verknüpfen von Playlists ermöglicht das Teilen von Playlists zwischen allen Versionen. Nach der Verknüpfung profitiert diese Version von geteilten Playlists.",
-        "link-playlist-info": "Das Hinzufügen und Löschen von Playlists wird ebenfalls geteilt.",
-        "keep-playlists": "Playlists behalten",
-        "keep-playlists-tip": "Wenn du Playlists behältst, werden die Playlists von der aktuellen Version in den Ordner für geteilte Playlists verschoben. Andernfalls gehen sie verloren.",
-        "unlink-playlists": "Playlists trennen",
-        "unlink-playlist-desc": "Achtung, das Trennen von Playlists verhindert die Nutzung geteilter Playlists für diese Version.",
-        "unlink-keep-playlists-tip": "Wenn du Playlists behältst, wird eine Kopie der geteilten Playlists für die aktuelle Version erstellt. Andernfalls werden keine Playlists für diese Version behalten.",
         "delete-playlist-ask": "Playlist löschen?",
         "delete-playlists-ask": "Playlists löschen?",
         "delete-playlist-desc": "Bist du dir sicher, dass du die Playlist \"{playlistTitle}\" löschen möchtest?",
