--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -8,6 +8,10 @@
         "maps": "マップ",
         "playlists": "プレイリスト",
         "models": "モデル",
+        "avatars": "アバター",
+        "sabers": "セイバー",
+        "platforms": "プラットフォーム",
+        "blocks": "ブロック",
         "cancel": "キャンセル",
         "delete": "削除",
         "accept": "同意する",
@@ -19,7 +23,8 @@
         "choose-folder": "フォルダーを選択",
         "unknown": "不明なエラーが発生しました (´・ω・`)",
         "warning": "警告",
-        "continue": "続ける"
+        "continue": "続ける",
+        "shared": "共有"
     },
     "title-bar": {
         "outdated": "時代遅れ"
@@ -756,30 +761,28 @@
                     }
                 }
             },
-            "link-maps": {
-                "title": "マップをリンク",
-                "desc": "マップをリンクすると、この機能が有効になっているすべてのバージョン間でマップを共有できます。リンクされると、このバージョンは共有マップの恩恵を受けることができます。",
-                "info": "マップの追加と削除も共有されます。",
-                "keep-maps": {
-                    "label": "マップを保持",
-                    "title": "マップを保持すると現在のバージョンのすべてのマップを共有マップフォルダーにコピーします。有効していない場合はこのバージョンのマップは保持されず、失われます。"
-                },
-                "valid-btn": "マップをリンク"
-            },
-            "unlink-maps": {
-                "title": "マップのリンクを解除",
-                "desc": "マップのリンクを解除すると、このバージョンでは共有マップを使用できなくなります。",
-                "keep-maps": {
-                    "label": "マップを保持",
-                    "title": "マップを保持は、リンクを解除した後、共有フォルダから現在のバージョンにすべてのマップをコピーします。これを無効をしても共有マップは失われません。"
-                },
-                "valid-btn": "マップのリンクを解除"
-            },
             "delete-duplicate-maps": {
                 "title": "マップを削除しますか?",
                 "desc": "マップ「{map}」のみが重複しています。削除してもよろしいですか？",
                 "desc-plural": "{nb}個の重複したマップが見つかりました。削除してもよろしいですか？"
             }
+        },
+        "link-contents": {
+            "title": "{contentType}をリンクする",
+            "p-1": "{contentType}をリンクすると、この機能が有効なすべてのバージョン間で{contentType}を共有できます。リンクされると、このバージョンは共有された{contentType}を利用できます。",
+            "p-2": "リンク機能を利用するには、すべての{itemsHtml}を{sharedHtml}フォルダに移動します。その後、共有された{contentType}フォルダを指すシンボリックリンクが元の{contentType}フォルダの代わりになります。",
+            "warning": "ご注意ください：{contentType}に影響を与える変更は、この機能が有効なすべてのバージョンにも影響を与えます。",
+            "what-is-a-symbolic-link": "シンボリックリンクとは何ですか？",
+            "i-need-help": "助けが必要です",
+            "valid-btn": "{contentType}をリンクする"
+        },
+        "unlink-contents": {
+            "title": "{contentType}のリンクを解除する",
+            "p-1": "注意してください：{contentType}のリンクを解除すると、この機能が再度有効化されるまで、このバージョンで共有された{contentType}を使用できなくなります。",
+            "p-2": "{contentType}のリンクを解除するには、{sharedHtml}を指すシンボリックリンクが削除されます。その後、共有フォルダ内のすべての{contentType}がBeat Saberのバージョン内の{itemsHtml}フォルダにコピーされます。",
+            "do-not-copy-contents": "{contentType}をコピーしない",
+            "do-not-copy-contents-tip": "有効にすると、共有フォルダ内の{contentType}はBeat Saberのバージョンにコピーされません。その結果、リンク解除後にBeat Saberバージョン内に{contentType}は残りません。",
+            "valid-btn": "{contentType}のリンクを解除する"
         },
         "download-maps": {
             "search-btn": "検索　",
@@ -1027,86 +1030,6 @@
                 "no-models": "モデルは見つかりませんでした。",
                 "no-internet": "インターネットに接続できませんでした。",
                 "error-occured": "エラーが発生しました。もう一度お試しください."
-            },
-            "link-models": {
-                "avatar": {
-                    "title": "アバターをリンク",
-                    "desc": "アバターをリンクすると、この機能が有効になっているすべてのバージョン間でアバターを共有できます。また、リンクすることでこのバージョンは共有アバターの恩恵を受けることができます。",
-                    "info": "アバターの追加と削除も共有されます",
-                    "keep-models": {
-                        "label": "アバターを保持",
-                        "title": "アバターを保持すると、現在のバージョンからすべてのアバターが共有アバターフォルダーにコピーされます。有効していない場合はこのバージョンのアバターは保持されず、それらは失われます。"
-                    },
-                    "valid-btn": "アバターをリンク"
-                },
-                "saber": {
-                    "title": "セーバーをリンク",
-                    "desc": "セーバーをリンクすると、この機能が有効になっているすべてのバージョン間でセーバーを共有できます。また、リンクすることでこのバージョンは共有セーバーの恩恵を受けることができます。",
-                    "info": "セーバーの追加と削除も共有されます",
-                    "keep-models": {
-                        "label": "セーバーを保持",
-                        "title": "セーバーを保持すると、現在のバージョンからすべてのセーバーが共有vフォルダーにコピーされます。有効していない場合はこのバージョンのセーバーは保持されず、それらは失われます。"
-                    },
-                    "valid-btn": "セーバーをリンク"
-                },
-                "platform": {
-                    "title": "プラットフォームをリンク",
-                    "desc": "プラットフォームをリンクすると、この機能が有効になっているすべてのバージョン間でプラットフォームを共有できます。また、リンクすることでこのバージョンは共有プラットフォームの恩恵を受けることができます。",
-                    "info": "プラットフォームの追加と削除も共有されます",
-                    "keep-models": {
-                        "label": "プラットフォームを保持",
-                        "title": "プラットフォームを保持すると、現在のバージョンからすべてのプラットフォームが共有プラットフォームフォルダーにコピーされます。有効していない場合はこのバージョンのプラットフォームは保持されず、それらは失われます。"
-                    },
-                    "valid-btn": "プラットフォームをリンク"
-                },
-                "bloq": {
-                    "title": "ノーツをリンク",
-                    "desc": "ノーツをリンクすると、この機能が有効になっているすべてのバージョン間でノーツを共有できます。また、リンクすることでこのバージョンは共有ノーツの恩恵を受けることができます。",
-                    "info": "ノーツの追加と削除も共有されます",
-                    "keep-models": {
-                        "label": "ノーツを保持",
-                        "title": "ノーツを保持すると、現在のバージョンからすべてのノーツが共有ノーツフォルダーにコピーされます。有効していない場合はこのバージョンのノーツは保持されず、それらは失われます。"
-                    },
-                    "valid-btn": "ノーツをリンク"
-                }
-            },
-            "unlink-models": {
-                "avatar": {
-                    "title": "アバターのリンクを解除",
-                    "desc": "アバターのリンクを解除すると、このバージョンでは共有アバターが使用できなくなります。",
-                    "keep-models": {
-                        "label": "アバターを保持する",
-                        "title": "アバターを保持すると、リンクを解除した後、共有フォルダにあるすべてのアバターが現在のバージョンにコピーされます。これが無効にしても共有アバターは失われません。"
-                    },
-                    "valid-btn": "アバターのリンクを解除"
-                },
-                "saber": {
-                    "title": "セーバーのリンクを解除",
-                    "desc": "セーバーのリンクを解除すると、このバージョンでは共有セーバーが使用できなくなります。",
-                    "keep-models": {
-                        "label": "セーバーを保持する",
-                        "title": "セーバーを保持すると、リンクを解除した後、共有フォルダにあるすべてのセーバーが現在のバージョンにコピーされます。これが無効にしても共有セーバーは失われません。"
-                    },
-                    "valid-btn": "セーバーのリンクを解除"
-                },
-                "platform": {
-                    "title": "プラットフォームのリンクを解除",
-                    "desc": "プラットフォームのリンクを解除すると、このバージョンでは共有プラットフォームが使用できなくなります。",
-                    "keep-models": {
-                        "label": "プラットフォームを保持する",
-                        "title": "プラットフォームを保持すると、リンクを解除した後、共有フォルダにあるすべてのプラットフォームが現在のバージョンにコピーされます。これが無効にしても共有プラットフォームは失われません。"
-                    },
-                    "valid-btn": "プラットフォームのリンクを解除"
-                },
-                "bloq": {
-                    "title": "ノーツのリンクを解除",
-                    "desc": "ノーツのリンクを解除すると、このバージョンでは共有ノーツが使用できなくなります。",
-                    "keep-models": {
-                        "label": "ノーツを保持する",
-                        "title": "ノーツを保持すると、リンクを解除した後、共有フォルダにあるすべてのノーツが現在のバージョンにコピーされます。これが無効にしても共有ノーツは失われません。"
-                    },
-                    "valid-btn": "ノーツのリンクを解除"
-                }
             }
         },
         "notifications": {
@@ -1183,14 +1106,6 @@
         "stop-download": "ダウンロードを停止",
         "cancel-download": "ダウンロードをキャンセル",
         "open-file": "ファイルを開く",
-        "link-playlists": "プレイリストをリンク",
-        "link-playlist-desc": "プレイリストをリンクすると、すべてのバージョン間でプレイリストを共有できます。リンクすると、このバージョンは共有プレイリストの恩恵を受けます",
-        "link-playlist-info": "プレイリストの追加と削除も共有されます",
-        "keep-playlists": "プレイリストを保持",
-        "keep-playlists-tip": "プレイリストを保持すると、現在のバージョンのプレイリストが共有プレイリストフォルダに移動されます。そうしない場合、それらは失われます",
-        "unlink-playlists": "プレイリストのリンクを解除",
-        "unlink-playlist-desc": "警告：プレイリストのリンクを解除すると、このバージョンでは共有プレイリストを使用できなくなります。",
-        "unlink-keep-playlists-tip": "プレイリストを保持すると、現在のバージョン用に共有プレイリストのコピーが作成されます。そうしない場合、このバージョンのプレイリストは保持されません。",
         "delete-playlist-ask": "プレイリストを削除しますか？",
         "delete-playlists-ask": "プレイリストを削除しますか？",
         "delete-playlist-desc": "プレイリスト「{playlistTitle}」を削除してもよろしいですか？",
