--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -8,6 +8,10 @@
         "maps": "Карты",
         "playlists": "Плейлисты",
         "models": "Модели",
+        "avatars": "Аватары",
+        "sabers": "Сабли",
+        "platforms": "Платформы",
+        "blocks": "Блоки",
         "cancel": "Отмена",
         "delete": "Удалить",
         "accept": "Принять",
@@ -19,7 +23,8 @@
         "choose-folder": "Изменить папку",
         "unknown": "Неизвестная ошибка ¯\\_(ツ)_/¯",
         "warning": "Внимание",
-        "continue": "Продолжить"
+        "continue": "Продолжить",
+        "shared": "Общий"
     },
     "title-bar": {
         "outdated": "устаревший"
@@ -756,30 +761,28 @@
                     }
                 }
             },
-            "link-maps": {
-                "title": "Связать карты",
-                "desc": "Общие карты доступны во всех версиях игры с этой функцией. Пока связь есть, эта версия будет иметь общие карты.",
-                "info": "Добавление и удаление карт так же будут общими",
-                "keep-maps": {
-                    "label": "Оставить карты",
-                    "title": "Все карты из этой версии станут общими. Если не включить, то карты этой версии будут потеряны."
-                },
-                "valid-btn": "Связать карты"
-            },
-            "unlink-maps": {
-                "title": "Отвязать карты",
-                "desc": "Осторожно, отвязка карт сделает недоступными общие карты для этой версии, пока вы не свяжете их снова.",
-                "keep-maps": {
-                    "label": "Оставить карты",
-                    "title": "Общие карты будут скопированы в папку карт этой версии. Карты не будут потеряны, если это не выбрано."
-                },
-                "valid-btn": "Отвязать карты"
-            },
             "delete-duplicate-maps": {
                 "title": "Удалить карту?",
                 "desc": "Только карта \"{map}\" является дубликатом. Вы уверены, что хотите ее удалить?",
                 "desc-plural": "Найдено {nb} дубликатов карт. Вы уверены, что хотите их удалить?"
             }
+        },
+        "link-contents": {
+            "title": "Связать {contentType}",
+            "p-1": "Связывание {contentType} позволяет делиться {contentType} между всеми версиями с этой функцией. После связывания эта версия будет использовать общие {contentType}.",
+            "p-2": "Для использования функции связывания все ваши {itemsHtml} будут перемещены в папку {sharedHtml}. После этого символическая ссылка, указывающая на общую папку {contentType}, заменит вашу оригинальную папку {contentType}.",
+            "warning": "Обратите внимание, что любые изменения, затрагивающие {contentType}, также затронут все версии с этой функцией.",
+            "what-is-a-symbolic-link": "Что такое символическая ссылка?",
+            "i-need-help": "Мне нужна помощь",
+            "valid-btn": "Связать {contentType}"
+        },
+        "unlink-contents": {
+            "title": "Разорвать связь {contentType}",
+            "p-1": "Будьте осторожны, разрыв связи {contentType} отключит использование общих {contentType} для этой версии, пока они снова не будут связаны.",
+            "p-2": "Чтобы разорвать связь ваших {contentType}, символическая ссылка, указывающая на {sharedHtml}, будет удалена. После этого все {contentType} из общей папки будут скопированы в папку {itemsHtml} вашей версии Beat Saber.",
+            "do-not-copy-contents": "Не копировать {contentType}",
+            "do-not-copy-contents-tip": "Если включено, {contentType} из общей папки не будут скопированы в вашу версию Beat Saber. В результате, никакие {contentType} не останутся в вашей версии Beat Saber после разрыва связи.",
+            "valid-btn": "Разорвать связь {contentType}"
         },
         "download-maps": {
             "search-btn": "Поиск",
@@ -1026,86 +1029,6 @@
                 "no-models": "Модели не найдены.",
                 "no-internet": "Нет интернета.",
                 "error-occured": "Ошибка, повторите попытку позже."
-            },
-            "link-models": {
-                "avatar": {
-                    "title": "Связать аватары",
-                    "desc": "Общие аватары доступны во всех версиях игры с этой функцией. Пока связь есть, эта версия будет иметь общие аватары.",
-                    "info": "Добавление и удаление аватаров так же будут общими",
-                    "keep-models": {
-                        "label": "Оставить аватары",
-                        "title": "Все аватары из этой версии станут общими. Если не включить, то аватары этой версии будут потеряны."
-                    },
-                    "valid-btn": "Связать аватары"
-                },
-                "saber": {
-                    "title": "Связать мечи",
-                    "desc": "Общие мечи доступны во всех версиях игры с этой функцией. Пока связь есть, эта версия будет иметь общие мечи.",
-                    "info": "Добавление и удаление мечей так же будут общими",
-                    "keep-models": {
-                        "label": "Оставить мечи",
-                        "title": "Все мечи из этой версии станут общими. Если не включить, то мечи этой версии будут потеряны."
-                    },
-                    "valid-btn": "Связать мечи"
-                },
-                "platform": {
-                    "title": "Связать платформы",
-                    "desc": "Общие платформы доступны во всех версиях игры с этой функцией. Пока связь есть, эта версия будет иметь общие платформы.",
-                    "info": "Добавление и удаление платформ так же будут общими",
-                    "keep-models": {
-                        "label": "Оставить платформы",
-                        "title": "Все платформы из этой версии станут общими. Если не включить, то платформы этой версии будут потеряны."
-                    },
-                    "valid-btn": "Связать платформы"
-                },
-                "bloq": {
-                    "title": "Связать кубы",
-                    "desc": "Общие кубы доступны во всех версиях игры с этой функцией. Пока связь есть, эта версия будет иметь общие кубы.",
-                    "info": "Adding and deleting bloqs will also be shared",
-                    "keep-models": {
-                        "label": "Оставить кубы",
-                        "title": "Все кубы из этой версии станут общими. Если не включить, то кубы этой версии будут потеряны."
-                    },
-                    "valid-btn": "Связать кубы"
-                }
-            },
-            "unlink-models": {
-                "avatar": {
-                    "title": "Отвязать аватары",
-                    "desc": "Осторожно, отвязка аватаров сделает недоступными общие аватары для этой версии, пока вы не свяжете их снова.",
-                    "keep-models": {
-                        "label": "Оставить аватары",
-                        "title": "Общие аватары будут скопированы в папку аватаров этой версии. Аватары не будут потеряны, если это не выбрано."
-                    },
-                    "valid-btn": "Отвязать аватары"
-                },
-                "saber": {
-                    "title": "Отвязать мечи",
-                    "desc": "Осторожно, отвязка мечей сделает недоступными общие мечи для этой версии, пока вы не свяжете их снова.",
-                    "keep-models": {
-                        "label": "Оставить мечи",
-                        "title": "Общие мечи будут скопированы в папку мечей этой версии. Мечи не будут потеряны, если это не выбрано."
-                    },
-                    "valid-btn": "Отвязать мечи"
-                },
-                "platform": {
-                    "title": "Отвязать платформы",
-                    "desc": "Осторожно, отвязка платформ сделает недоступными общие платформы для этой версии, пока вы не свяжете их снова.",
-                    "keep-models": {
-                        "label": "Оставить платформы",
-                        "title": "Общие платформы будут скопированы в папку платформ этой версии. Платформы не будут потеряны, если это не выбрано."
-                    },
-                    "valid-btn": "Отвязать платформы"
-                },
-                "bloq": {
-                    "title": "Отвязать кубы",
-                    "desc": "Осторожно, отвязка кубов сделает недоступными общие кубы для этой версии, пока вы не свяжете их снова.",
-                    "keep-models": {
-                        "label": "Оставить кубы",
-                        "title": "Общие кубы будут скопированы в папку кубов этой версии. Кубы не будут потеряны, если это не выбрано."
-                    },
-                    "valid-btn": "Отвязать кубы"
-                }
             }
         },
         "notifications": {
@@ -1182,14 +1105,6 @@
         "stop-download": "Остановить загрузку",
         "cancel-download": "Отменить загрузку",
         "open-file": "Открыть файл",
-        "link-playlists": "Связать плейлисты",
-        "link-playlist-desc": "Связывание плейлистов позволяет делиться плейлистами между всеми версиями. После связывания эта версия будет иметь доступ к общим плейлистам",
-        "link-playlist-info": "Добавление и удаление плейлистов также будет общим",
-        "keep-playlists": "Сохранить плейлисты",
-        "keep-playlists-tip": "Сохранение плейлистов переместит плейлисты из текущей версии в папку общих плейлистов. В противном случае они будут потеряны",
-        "unlink-playlists": "Отвязать плейлисты",
-        "unlink-playlist-desc": "Внимание, отвязка плейлистов больше не позволит использовать общие плейлисты для этой версии.",
-        "unlink-keep-playlists-tip": "Сохранение плейлистов создаст копию общих плейлистов для текущей версии. В противном случае для этой версии не будут сохранены плейлисты.",
         "delete-playlist-ask": "Удалить плейлист?",
         "delete-playlists-ask": "Удалить плейлисты?",
         "delete-playlist-desc": "Вы уверены, что хотите удалить плейлист \"{playlistTitle}\"?",
