--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -8,6 +8,10 @@
         "maps": "맵",
         "playlists": "재생 목록",
         "models": "모델",
+        "avatars": "아바타",
+        "sabers": "세이버",
+        "platforms": "플랫폼",
+        "blocks": "블록",
         "cancel": "취소",
         "delete": "삭제",
         "accept": "동의",
@@ -19,7 +23,8 @@
         "choose-folder": "폴더를 선택하세요",
         "unknown": "알 수 없는 오류가 발생했습니다 (´・ω・`)",
         "warning": "경고",
-        "continue": "계속"
+        "continue": "계속",
+        "shared": "공유"
     },
     "title-bar": {
         "outdated": "구식"
@@ -756,30 +761,28 @@
                     }
                 }
             },
-            "link-maps": {
-                "title": "맵 연결",
-                "desc": "맵을 연결하면 이 기능이 활성화된 모든 버전 간에 맵을 공유할 수 있습니다. 연결되면 이 버전은 공유 맵을 활용할 수 있습니다.",
-                "info": "맵 추가 및 삭제도 공유됩니다.",
-                "keep-maps": {
-                    "label": "맵 유지",
-                    "title": "맵 유지를 선택하면 현재 버전의 모든 맵이 공유 맵 폴더에 복사됩니다. 활성화하지 않으면 이 버전의 맵은 유지되지 않고 손실됩니다."
-                },
-                "valid-btn": "맵 연결"
-            },
-            "unlink-maps": {
-                "title": "맵 연결 해제",
-                "desc": "맵 연결을 해제하면 이 버전에서 공유 맵을 사용할 수 없습니다.",
-                "keep-maps": {
-                    "label": "맵 유지",
-                    "title": "맵 유지를 선택하면 연결을 해제한 후 공유 폴더에서 현재 버전으로 모든 맵이 복사됩니다. 이 옵션을 비활성화해도 공유 맵은 손실되지 않습니다."
-                },
-                "valid-btn": "맵 연결 해제"
-            },
             "delete-duplicate-maps": {
                 "title": "맵을 삭제하시겠습니까?",
                 "desc": "맵 {map}만 중복되었습니다. 삭제하시겠습니까?",
                 "desc-plural": "{nb}개의 중복된 맵이 발견되었습니다. 삭제하시겠습니까?"
             }
+        },
+        "link-contents": {
+            "title": "{contentType} 링크",
+            "p-1": "{contentType}를 링크하면 이 기능이 활성화된 모든 버전 간에 {contentType}를 공유할 수 있습니다. 링크된 후에는 이 버전이 공유된 {contentType}를 사용할 수 있게 됩니다.",
+            "p-2": "링크 기능을 사용하려면 모든 {itemsHtml}를 {sharedHtml} 폴더로 이동해야 합니다. 그런 다음, 공유된 {contentType} 폴더를 가리키는 심볼릭 링크가 기존의 {contentType} 폴더를 대체합니다.",
+            "warning": "주의하세요: {contentType}에 영향을 미치는 모든 변경 사항은 이 기능이 활성화된 모든 버전에 영향을 미칩니다.",
+            "what-is-a-symbolic-link": "심볼릭 링크란 무엇인가요?",
+            "i-need-help": "도움이 필요합니다",
+            "valid-btn": "{contentType} 링크"
+        },
+        "unlink-contents": {
+            "title": "{contentType} 링크 해제",
+            "p-1": "주의하세요: {contentType} 링크를 해제하면 이 기능이 다시 활성화될 때까지 이 버전에서 공유된 {contentType}를 사용할 수 없게 됩니다.",
+            "p-2": "{contentType} 링크를 해제하려면 {sharedHtml}을 가리키는 심볼릭 링크가 제거됩니다. 그 후, 공유 폴더에 있는 모든 {contentType}가 Beat Saber 버전의 {itemsHtml} 폴더로 복사됩니다.",
+            "do-not-copy-contents": "{contentType}를 복사하지 않기",
+            "do-not-copy-contents-tip": "활성화되면, 공유 폴더에 있는 {contentType}가 Beat Saber 버전으로 복사되지 않습니다. 그 결과, 링크 해제 후 Beat Saber 버전에 {contentType}가 남지 않게 됩니다.",
+            "valid-btn": "{contentType} 링크 해제"
         },
         "download-maps": {
             "search-btn": "검색",
@@ -1027,86 +1030,6 @@
                 "no-models": "모델을 찾을 수 없습니다.",
                 "no-internet": "인터넷에 연결할 수 없습니다.",
                 "error-occured": "오류가 발생했습니다. 다시 시도해 주세요."
-            },
-            "link-models": {
-                "avatar": {
-                    "title": "아바타 링크",
-                    "desc": "아바타를 링크하면 이 기능이 활성화된 모든 버전 간에 아바타를 공유할 수 있습니다. 또한 링크하면 이 버전이 공유 아바타의 혜택을 받을 수 있습니다.",
-                    "info": "아바타의 추가 및 삭제도 공유됩니다.",
-                    "keep-models": {
-                        "label": "아바타 유지",
-                        "title": "아바타를 유지하면 현재 버전에서 모든 아바타가 공유 아바타 폴더에 복사됩니다. 활성화하지 않으면 이 버전의 아바타가 유지되지 않으며, 그들은 사라집니다."
-                    },
-                    "valid-btn": "아바타 링크"
-                },
-                "saber": {
-                    "title": "세이버 링크",
-                    "desc": "세이버를 링크하면 이 기능이 활성화된 모든 버전 간에 세이버를 공유할 수 있습니다. 또한 링크하면 이 버전이 공유 세이버의 혜택을 받을 수 있습니다.",
-                    "info": "세이버의 추가 및 삭제도 공유됩니다.",
-                    "keep-models": {
-                        "label": "세이버 유지",
-                        "title": "세이버를 유지하면 현재 버전에서 모든 세이버가 공유 세이버 폴더에 복사됩니다. 활성화하지 않으면 이 버전의 세이버가 유지되지 않으며, 그들은 사라집니다."
-                    },
-                    "valid-btn": "세이버 링크"
-                },
-                "platform": {
-                    "title": "플랫폼 링크",
-                    "desc": "플랫폼을 링크하면 이 기능이 활성화된 모든 버전 간에 플랫폼을 공유할 수 있습니다. 또한 링크하면 이 버전이 공유 플랫폼의 혜택을 받을 수 있습니다.",
-                    "info": "플랫폼의 추가 및 삭제도 공유됩니다.",
-                    "keep-models": {
-                        "label": "플랫폼 유지",
-                        "title": "플랫폼을 유지하면 현재 버전에서 모든 플랫폼이 공유 플랫폼 폴더에 복사됩니다. 활성화하지 않으면 이 버전의 플랫폼이 유지되지 않으며, 그들은 사라집니다."
-                    },
-                    "valid-btn": "플랫폼 링크"
-                },
-                "bloq": {
-                    "title": "노트 링크",
-                    "desc": "노트를 링크하면 이 기능이 활성화된 모든 버전 간에 노트를 공유할 수 있습니다. 또한 링크하면 이 버전이 공유 노트의 혜택을 받을 수 있습니다.",
-                    "info": "노트의 추가 및 삭제도 공유됩니다.",
-                    "keep-models": {
-                        "label": "노트 유지",
-                        "title": "노트를 유지하면 현재 버전에서 모든 노트가 공유 노트 폴더에 복사됩니다. 활성화하지 않으면 이 버전의 노트가 유지되지 않으며, 그들은 사라집니다."
-                    },
-                    "valid-btn": "노트 링크"
-                }
-            },
-            "unlink-models": {
-                "avatar": {
-                    "title": "아바타 링크 해제",
-                    "desc": "아바타의 링크를 해제하면 이 버전에서는 공유 아바타를 사용할 수 없습니다.",
-                    "keep-models": {
-                        "label": "아바타 유지",
-                        "title": "아바타를 유지하면 링크를 해제한 후 공유 폴더에 있는 모든 아바타가 현재 버전에 복사됩니다. 이것을 비활성화하더라도 공유 아바타는 사라지지 않습니다."
-                    },
-                    "valid-btn": "아바타 링크 해제"
-                },
-                "saber": {
-                    "title": "세이버 링크 해제",
-                    "desc": "세이버의 링크를 해제하면 이 버전에서는 공유 세이버를 사용할 수 없습니다.",
-                    "keep-models": {
-                        "label": "세이버 유지",
-                        "title": "세이버를 유지하면 링크를 해제한 후 공유 폴더에 있는 모든 세이버가 현재 버전에 복사됩니다. 이것을 비활성화하더라도 공유 세이버는 사라지지 않습니다."
-                    },
-                    "valid-btn": "세이버 링크 해제"
-                },
-                "platform": {
-                    "title": "플랫폼 링크 해제",
-                    "desc": "플랫폼의 링크를 해제하면 이 버전에서는 공유 플랫폼을 사용할 수 없습니다.",
-                    "keep-models": {
-                        "label": "플랫폼 유지",
-                        "title": "플랫폼을 유지하면 링크를 해제한 후 공유 폴더에 있는 모든 플랫폼이 현재 버전에 복사됩니다. 이것을 비활성화하더라도 공유 플랫폼은 사라지지 않습니다."
-                    },
-                    "valid-btn": "플랫폼 링크 해제"
-                },
-                "bloq": {
-                    "title": "노트 링크 해제",
-                    "desc": "노트의 링크를 해제하면 이 버전에서는 공유 노트를 사용할 수 없습니다.",
-                    "keep-models": {
-                        "label": "노트 유지",
-                        "title": "노트를 유지하면 링크를 해제한 후 공유 폴더에 있는 모든 노트가 현재 버전에 복사됩니다. 이것을 비활성화하더라도 공유 노트는 사라지지 않습니다."
-                    },
-                    "valid-btn": "노트 링크 해제"
-                }
             }
         },
         "notifications": {
@@ -1183,14 +1106,6 @@
         "stop-download": "다운로드 중지",
         "cancel-download": "다운로드 취소",
         "open-file": "파일 열기",
-        "link-playlists": "재생목록 링크",
-        "link-playlist-desc": "재생목록을 링크하면 모든 버전 간에 재생목록을 공유할 수 있습니다. 링크를 클릭하면 이 버전이 공유 재생목록의 혜택을 받습니다.",
-        "link-playlist-info": "재생목록의 추가 및 삭제도 공유됩니다.",
-        "keep-playlists": "재생목록 유지",
-        "keep-playlists-tip": "재생목록을 유지하면 현재 버전의 재생목록이 공유 재생목록 폴더로 이동됩니다. 그렇지 않으면 잃어버리게 됩니다.",
-        "unlink-playlists": "재생목록 링크 해제",
-        "unlink-playlist-desc": "경고: 재생목록 링크를 해제하면 이 버전에서는 공유 재생목록을 사용할 수 없습니다.",
-        "unlink-keep-playlists-tip": "재생목록을 유지하면 현재 버전에 대해 공유 재생목록의 복사본이 생성됩니다. 그렇지 않으면 이 버전의 재생목록이 유지되지 않습니다.",
         "delete-playlist-ask": "재생목록을 삭제하시겠습니까?",
         "delete-playlists-ask": "재생목록을 삭제하시겠습니까?",
         "delete-playlist-desc": "재생목록「{playlistTitle}」을(를) 삭제해도 괜찮습니까?",
