--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -8,6 +8,10 @@
         "maps": "譜面",
         "playlists": "歌單",
         "models": "模型",
+        "avatars": "頭像",
+        "sabers": "光劍",
+        "platforms": "平台",
+        "blocks": "方塊",
         "cancel": "取消",
         "delete": "刪除",
         "accept": "接受",
@@ -19,7 +23,8 @@
         "choose-folder": "選擇文件夾",
         "unknown": "發生了一個錯誤 ¯\\_(ツ)_/¯",
         "warning": "警告",
-        "continue": "繼續"
+        "continue": "繼續",
+        "shared": "共享"
     },
     "title-bar": {
         "outdated": "過時"
@@ -756,30 +761,28 @@
                     }
                 }
             },
-            "link-maps": {
-                "title": "關聯譜面",
-                "desc": "關聯譜面可以在所有啟用此功能的版本之間共享譜面。一旦關聯，該版本將受益於共享譜面。",
-                "info": "新增和刪除的譜面也將被共享",
-                "keep-maps": {
-                    "label": "保留譜面",
-                    "title": "保留譜面將會把當前版本的所有譜面複製到共享譜面文件夾。否則，該版本的譜面將不會被保留，它們將遺失。"
-                },
-                "valid-btn": "關聯譜面"
-            },
-            "unlink-maps": {
-                "title": "取消關聯譜面",
-                "desc": "請注意，取消關聯譜面後該版本將無法使用共享譜面，直到重新啟用。",
-                "keep-maps": {
-                    "label": "保留譜面",
-                    "title": "保留譜面將會在取消關聯後把共享文件夾的所有譜面複製到當前版本。如果此項被禁用，譜面也不會遺失。"
-                },
-                "valid-btn": "取消關聯譜面"
-            },
             "delete-duplicate-maps": {
                 "title": "刪除地圖",
                 "desc": "只有地圖「{map}」是重複的。你確定要刪除它嗎？",
                 "desc-plural": "發現了 {nb} 個重複的地圖。你確定要刪除它們嗎？"
             }
+        },
+        "link-contents": {
+            "title": "連結{contentType}",
+            "p-1": "連結{contentType}允許在啟用此功能的所有版本之間共享{contentType}。連結後，該版本將受益於共享的{contentType}。",
+            "p-2": "為了使用連結功能，您的所有{itemsHtml}將被移動到{sharedHtml}資料夾。之後，一個指向共享{contentType}資料夾的符號連結將取代您原本的{contentType}資料夾。",
+            "warning": "請注意，任何影響{contentType}的更改也會影響所有啟用此功能的版本。",
+            "what-is-a-symbolic-link": "什麼是符號連結？",
+            "i-need-help": "我需要幫助",
+            "valid-btn": "連結{contentType}"
+        },
+        "unlink-contents": {
+            "title": "取消連結{contentType}",
+            "p-1": "注意：取消連結{contentType}將會停用此版本中共享的{contentType}功能，直到該功能再次啟用。",
+            "p-2": "為了取消連結您的{contentType}，指向{sharedHtml}的符號連結將被移除。之後，共享資料夾中的所有{contentType}將被複製到您Beat Saber版本的{itemsHtml}資料夾中。",
+            "do-not-copy-contents": "不要複製{contentType}",
+            "do-not-copy-contents-tip": "如果啟用，共享資料夾中的{contentType}將不會被複製到您的Beat Saber版本中。結果是，在取消連結後，您的Beat Saber版本中將不再保留任何{contentType}。",
+            "valid-btn": "取消連結{contentType}"
         },
         "download-maps": {
             "search-btn": "搜尋",
@@ -1027,86 +1030,6 @@
                 "no-models": "未找到模型",
                 "no-internet": "無網路連接",
                 "error-occured": "發生了一個錯誤，稍後重試。"
-            },
-            "link-models": {
-                "avatar": {
-                    "title": "關聯 Avatar",
-                    "desc": "關聯 Avatar 允許在所有啟用此功能的版本之間共享 Avatar。一旦關聯，該版本將受益於共享 Avatar。",
-                    "info": "對 Avatar 的新增和刪除也將被共享",
-                    "keep-models": {
-                        "label": "保留 Avatar",
-                        "title": "保留 Avatar 將會把當前版本的所有 Avatar 複製到共享 Avatar文件夾。否則，該版本的 Avatar將不會被保留，它們將遺失。"
-                    },
-                    "valid-btn": "關聯 Avatar "
-                },
-                "saber": {
-                    "title": "關聯光劍",
-                    "desc": "關聯光劍允許在所有啟用此功能的版本之間共享光劍。一旦關聯，該版本將受益於共享光劍。",
-                    "info": "對光劍的新增和刪除也將被共享",
-                    "keep-models": {
-                        "label": "保留光劍",
-                        "title": "保留光劍將會把當前版本的所有光劍複製到共享光劍文件夾。否則，該版本的光劍將不會被保留，它們將遺失。"
-                    },
-                    "valid-btn": "關聯光劍"
-                },
-                "platform": {
-                    "title": "關聯平台",
-                    "desc": "關聯平台允許在所有啟用此功能的版本之間共享平台。一旦關聯，該版本將受益於共享平台。",
-                    "info": "對平台的新增和刪除也將被共享",
-                    "keep-models": {
-                        "label": "保留平台",
-                        "title": "保留平台將會把當前版本的所有平台複製到共享平台文件夾。否則，該版本的平台將不會被保留，它們將遺失。"
-                    },
-                    "valid-btn": "關聯平台"
-                },
-                "bloq": {
-                    "title": "關聯方塊",
-                    "desc": "關聯方塊允許在所有啟用此功能的版本之間共享方塊。一旦關聯，該版本將受益於共享方塊。",
-                    "info": "對方塊的新增和刪除也將被共享",
-                    "keep-models": {
-                        "label": "保留方塊",
-                        "title": "保留方塊將會把當前版本的所有方塊複製到共享方塊文件夾。否則，該版本的方塊將不會被保留，它們將遺失。"
-                    },
-                    "valid-btn": "關聯方塊"
-                }
-            },
-            "unlink-models": {
-                "avatar": {
-                    "title": "取消關聯 Avatar",
-                    "desc": "請注意，取消關聯 Avatar 將禁用該版本的共享 Avatar 使用，直到重新啟用。",
-                    "keep-models": {
-                        "label": "保留 Avatar",
-                        "title": "保留 Avatar 將會在取消關聯後把共享文件夾的所有 Avatar 複製到當前版本。如果此項被禁用，Avatar 將不會遺失。"
-                    },
-                    "valid-btn": "取消關聯 Avatar"
-                },
-                "saber": {
-                    "title": "取消關聯光劍",
-                    "desc": "請注意，取消關聯光劍將禁用該版本的共享光劍使用，直到重新啟用。",
-                    "keep-models": {
-                        "label": "保留光劍",
-                        "title": "保留光劍將會在取消關聯後把共享文件夾的所有光劍複製到當前版本。如果此項被禁用，光劍將不會遺失。"
-                    },
-                    "valid-btn": "取消關聯光劍"
-                },
-                "platform": {
-                    "title": "取消關聯平台",
-                    "desc": "請注意，取消關聯平台將禁用該版本的共享平台使用，直到重新啟用。",
-                    "keep-models": {
-                        "label": "保留平台",
-                        "title": "保留平台將會在取消關聯後把共享文件夾的所有平台複製到當前版本。如果此項被禁用，平台將不會遺失。"
-                    },
-                    "valid-btn": "取消關聯平台"
-                },
-                "bloq": {
-                    "title": "取消關聯方塊",
-                    "desc": "請注意，取消關聯方塊將禁用該版本的共享方塊使用，直到重新啟用。",
-                    "keep-models": {
-                        "label": "保留方塊",
-                        "title": "保留方塊將會在取消關聯後把共享文件夾的所有方塊複製到當前版本。如果此項被禁用，方塊將不會遺失。"
-                    },
-                    "valid-btn": "取消關聯方塊"
-                }
             }
         },
         "notifications": {
@@ -1183,14 +1106,6 @@
         "stop-download": "停止下載",
         "cancel-download": "取消下載",
         "open-file": "開啟檔案",
-        "link-playlists": "連結播放清單",
-        "link-playlist-desc": "連結播放清單允許在所有版本之間共享播放清單。一旦連結，此版本將受益於共享播放清單",
-        "link-playlist-info": "新增和刪除播放清單也將被共享",
-        "keep-playlists": "保留播放清單",
-        "keep-playlists-tip": "保留播放清單將把當前版本的播放清單移動到共享播放清單資料夾。否則，它們將遺失",
-        "unlink-playlists": "取消連結播放清單",
-        "unlink-playlist-desc": "警告，取消連結播放清單將不再允許此版本使用共享播放清單。",
-        "unlink-keep-playlists-tip": "保留播放清單將為當前版本建立共享播放清單的副本。否則，此版本將不保留任何播放清單。",
         "delete-playlist-ask": "刪除播放清單？",
         "delete-playlists-ask": "刪除播放清單？",
         "delete-playlist-desc": "您確定要刪除播放清單 \"{playlistTitle}\" 嗎？",
